openshift/api-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    openshift.io/host.generated: "true"
  labels:
    app: api
    app.kubernetes.io/component: api
    app.kubernetes.io/instance: api
  name: api
spec:
  port:
    targetPort: 8000
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: api
    weight: 100
  wildcardPolicy: None
